# sagard-tech-challenge

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
fund-load-project/: .gitignore  README.md  pyproject.toml
fund-load-project/inputs/: input.txt
fund-load-project/outputs/: blockchain.json  output.txt  output_with_detail.jsonl
fund-load-project/src/: _constants.py  _utils.py  blockchain.py  main.py  redis_storage.py  transactions.py  validator.py
fund-load-project/tests/: test_validator.py
fund_load_project/: README.md  main.py
fund_load_project/outputs/: blockchain.json  output.json  transaction_detailed_validation_results.jsonl  transaction_validation_results.jsonl
fund_load_project/src/: _constants.py  _utils.py  blockchain.py  redis_storage.py  transactions.py  validator.py  validator_refactor.py
fund_load_project/tests/: conftest.py  test_redis_storage.py  test_transaction.py
fund_load_project_tests/: test_blockchain.py
