[project]
name = "fund-load-project"
version = "0.1.0"
authors = [
    { name = "Zyad Benameur", email = "zyad.benameur@hec.ca" }
]
requires-python = ">=3.11"

dependencies = [
    "redis>=6.4.0",
    "pytest",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["tests"]